manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
  template:
    metadata:
      labels:
        app: webhook
    spec:
      containers:
        - name: webhook
          image: webhook:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
          volumeMounts:
            - name: tls-certs
              #mountPath: /certs
              mountPath: /certs
              # The path where the certs are mounted inside the container
              # This should match the path used in your webhook.py
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: webhook-server-cert
