manifests/test-pod-validation-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: evil-pod
  labels:
    evil: "true"
spec:
  containers:
  - name: nginx
    image: nginx
