manifests/test-pod-validation-pass-mutation-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  labels:
    role: "frontend"
spec:
  containers:
  - name: nginx
    image: nginx
