manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: default
spec:
  selector:
    app: webhook
  ports:
    - port: 443
      targetPort: 443
