manifests/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
webhooks:
  - name: mutate.webhook.default.svc
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        name: webhook
        namespace: default
        path: /mutate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVVVpBVWV5V1dKdVAxakdvckdXekZCb01oUXBrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmF5MWpZVEFlRncweU5UQTBNamN3TXpJeE5UVmFGdzB6TlRBMApNalV3TXpJeE5UVmFNQlV4RXpBUkJnTlZCQU1NQ25kbFltaHZiMnN0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFESzR3UzRQYko2Ylo3L3paVExXd1pjVGE5U0tTQ3Fmb1Z5NFcvaGw5WTQKVjdKcWs5R1BvcnoyMEFocG00UHhzajQycnhLNG5ZSFpSU2M0cHpFejBrOEZLL1JaSDFHbWs4cG0rZGd4eTdQMAp2endSQlYvWkFq [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
