manifests/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
webhooks:
  - name: validate.webhook.default.svc
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      service:
        name: webhook
        namespace: default
        path: /validate
        port: 443
      caBundle: <caBundle>
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
